--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
-
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="utf-8">
-    <title>菜鸟教程(runoob.com)</title>
+<head>
+<meta charset="utf-8">
+<title>0909</title>
 </head>
 <body>
-    <p>田宇大傻逼</p>
-    <p>我是大美女</p>
-    <br>哈哈<br>我很厉害吧<br>膜拜我吧<br>
-    <p>
-        一个图像:
-        <img src="smiley.gif" alt="Smiley face" width="32" height="32"></p>
-        <p>
-            一个动图:
-        <img src="hackanm.gif" alt="Computer man" width="48" height="48"></p>
+ 
+<h1>猜猜今天什么日子~~</h1>
+ 
+<p>是我和田宇在一起一年的日子~~</p>
+
+<p>这是田宇~~</p>
+<img src="微信图片_20230906233156.jpg" alt="Big Boat"width="240" height="250">
+<p>这是美美的我~</p>
+<img src="微信图片_20230907220034.jpg" alt="Big Boat"width="240" height="250">
+
+<p>我很漂亮吧~~~~嘿嘿田宇去给我买小蛋糕啦 我喜欢吃小蛋糕~</p>
+<img src="微信图片_20230909193442.jpg" alt="Big Boat"width="240" height="250">
+
+<p>我喜欢好多东西捏</p>
+<ul>
+    <li>小玩偶</li>
+    <li>小蛋糕</li>
+    <li>还有田宇嘿嘿</li>
+    </ul>
+
+    <p>我还有很多东西不喜欢</p>
+    <ol>
+        <li>肥肉</li>
+        <li>巧克力</li>
+        </ol>
+
+    
+            
+
+
+ 
 </body>
 </html>
